# consult-comparables-v2

./: README.md  pyproject.toml  valuation.py
consult_comparables_v2/: app.py  service.py
consult_comparables_v2/views/: csv_valuation.py  home.py  valuation.py
