[project]
name = "consult-comparables-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "mulirico",email = "murillocontas@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "streamlit-folium (>=0.25.3,<0.26.0)",
    "folium (>=0.20.0,<0.21.0)"
]

[tool.poetry]
name = "consult-comparables-v2"
version = "0.1.0"
packages = [{ include = "consult_comparables_v2" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
